<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E98D7"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Spinner Dropdown List -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/dropdown_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/spinner_dropdown_desc"
                android:entries="@array/spinner_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.045" />

            <!-- Notificación -->
            <TextView
                android:id="@+id/notificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="Foto publicada con éxito"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/dropdown_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/boton_background"
                android:fontFamily="@font/comfortaa"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/imagen_redondeada"
                android:contentDescription="@string/foto_seleccionada_desc"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificacion"
                app:layout_constraintVertical_bias="0.103" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foto"
                app:layout_constraintVertical_bias="0.179">

                <!-- Sección Foto -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_foto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:text="@string/foto"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/camara"
                        android:layout_width="106dp"
                        android:layout_height="71dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icono_camara_desc"
                        android:src="@drawable/camara" />
                </LinearLayout>

                <!-- Sección Galería -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_galeria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:text="@string/galeria"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/galeria"
                        android:layout_width="91dp"
                        android:layout_height="79dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icono_galeria_desc"
                        android:src="@drawable/galeria" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/publicar"
                android:layout_width="121dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="146dp"
                android:layout_marginEnd="145dp"
                android:background="@drawable/boton_background"
                android:fontFamily="@font/comfortaa"
                android:text="@string/publicar"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
